refacto controller & route with custom error handler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,16 @@
     "outDir": "dist",
     "target": "es5",
     "module": "commonjs",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": [
+    "src",
+    "types"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
