--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "ts-node-dev src/app.ts",
-    "start": "ts-node-dev src/app.ts"
+    "start": "ts-node -r tsconfig.json src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,11 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
