--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "ts-node-dev src/app.ts",
-    "start": "ts-node -r tsconfig.json src/app.ts"
+    "start": "ts-node src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -29,7 +29,7 @@
     "typescript": "^4.5.4"
   },
   "prettier": {
-    "printWidth": 110,
+    "printWidth": 100,
     "tabWidth": 2
   }
 }
