--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "ts-node-dev src/app.ts",
+    "dev": "nodemon",
     "start": "ts-node src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "create-hash": "^1.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "http-status": "^1.5.1"
+    "http-status": "^1.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.15",
+    "tsconfig-paths": "^3.14.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -31,5 +35,18 @@
   "prettier": {
     "printWidth": 100,
     "tabWidth": 2
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
+    ],
+    "watch": [
+      "src"
+    ],
+    "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/app.ts",
+    "ext": "ts, js"
   }
 }
