--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,15 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "baseUrl": "./src/"
+    "baseUrl": "./src/",
+    "paths": {
+      "controllers/*": ["controllers/*"],
+      "models/*": ["models/*"],
+      "services/*": ["services/*"],
+      "utils/*": ["utils/*"],
+      "routes/*": ["routes/*"],
+      "middlewares/*": ["middlewares/*"],
+    }
   },
   "include": [
     "src",
